--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3126,12 +3126,10 @@
                                                     if (qthMarker) {
                                                         qthMarker.setLatLng([lat, lon]);
                                                     } else {
-                                                        qthMarker = L.circleMarker([lat, lon], {
-                                                            radius: 50,
-                                                            color: 'red',
-                                                            fillColor: 'red',
-                                                            fillOpacity: 1
-                                                        }).addTo(map).bindPopup('My Locator');
+                                                        var qthMarker = L.marker([lat, lon])
+                                                            .addTo(map)
+                                                            .bindPopup('My Locator');
+
                                                     }
                                                 } else {
                                                     document.getElementById("chartWrapper").style.display = "none";
