--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3184,7 +3184,7 @@
                                                     } else {
                                                         dxMarker = L.marker([lat, lon])
                                                             .addTo(map)
-                                                            .bindPopup(`DX Locator: ${dxLocator}`);
+                                                            .bindPopup(`DX Locator: ${locator}`);
                                                     }
                                                 } else {
                                                     document.getElementById("dxChartWrapper").style.display = "none";
