--- a/eme-observer/eoml copy 5.html
+++ b/eme-observer/eoml copy 5.html
@@ -66,7 +66,6 @@
                                                                         <script src="https://ha8tks.github.io/Leaflet.CQzones/src/L.CQzones.js"></script>
                                                                         <script src="https://ha8tks.github.io/Leaflet.Maidenhead/src/L.Maidenhead.js"></script>
                                                                         <script src="a.ob.js"></script>
-                                                                        <script src="https://cdn.plot.ly/plotly-2.35.2.min.js"></script>
                                                                         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
                                                                     <style>
                                                                         html, body {
@@ -3091,200 +3090,58 @@
       }
     }
 
-                                            // ─────────────────────────────────────────────────────────────────────────────
-                                            // RF-NOISE 3D DOME FOR "MY LOCATOR" MARKER
-                                            // ─────────────────────────────────────────────────────────────────────────────
-                                            let myStationNoiseData = null;   // {az:[], el:[], noise:[]}
-                                            let noiseDomeDiv = null;
-
-                                            function parseNoiseCSV(text) {
-                                                const lines = text.trim().split(/\r?\n/);
-                                                if (lines.length < 2) return null;
-                                                const header = lines[0].toLowerCase();
-                                                const cols = header.split(';');
-                                                const azIdx    = cols.findIndex(h => h.trim() === 'azimuth');
-                                                const elIdx    = cols.findIndex(h => h.trim() === 'elevation');
-                                                const noiseIdx = cols.findIndex(h => h.trim() === 'noise');
-                                                if (azIdx === -1 || elIdx === -1 || noiseIdx === -1) return null;
-
-                                                const az = [], el = [], noise = [];
-                                                for (let i = 1; i < lines.length; i++) {
-                                                    const row = lines[i].split(';');
-                                                    if (row.length < 3) continue;
-                                                    const a = parseFloat(row[azIdx]);
-                                                    const e = parseFloat(row[elIdx]);
-                                                    const n = parseFloat(row[noiseIdx].replace(',', '.'));
-                                                    if (!isNaN(a) && !isNaN(e) && !isNaN(n)) {
-                                                        az.push(a);
-                                                        el.push(e);
-                                                        noise.push(n);
-                                                    }
-                                                }
-                                                return {az, el, noise};
-                                            }
-
-                                            function createNoiseDome(data) {
-                                                if (!data || data.az.length === 0) return;
-
-                                                const x = [], y = [], z = [], c = [];
-                                                for (let i = 0; i < data.az.length; i++) {
-                                                    const azRad = data.az[i] * Math.PI / 180;
-                                                    const elRad = data.el[i] * Math.PI / 180;
-                                                    const r = Math.cos(elRad);
-                                                    x.push(r * Math.cos(azRad));
-                                                    y.push(r * Math.sin(azRad));
-                                                    z.push(Math.sin(elRad));
-                                                    c.push(data.noise[i]);
-                                                }
-
-                                                const trace = {
-                                                    type: 'scatter3d',
-                                                    mode: 'markers',
-                                                    x, y, z,
-                                                    marker: {
-                                                        size: 4,
-                                                        color: c,
-                                                        colorscale: 'Viridis',
-                                                        cmin: Math.min(...c),
-                                                        cmax: Math.max(...c),
-                                                        colorbar: {title: 'Noise (dB)', thickness: 15},
-                                                        opacity: 0.9
-                                                    },
-                                                    hovertemplate: 'Az: %{customdata[0]}°<br>El: %{customdata[1]}°<br>Noise: %{marker.color} dB<extra></extra>',
-                                                    customdata: data.az.map((a, i) => [a, data.el[i]])
-                                                };
-
-                                                const layout = {
-                                                    margin: {l:0,r:0,t:0,b:0},
-                                                    scene: {
-                                                        xaxis: {title:'', showticklabels:false, zeroline:false},
-                                                        yaxis: {title:'', showticklabels:false, zeroline:false},
-                                                        zaxis: {title:'', showticklabels:false, zeroline:false},
-                                                        camera: {eye: {x:1.5, y:1.5, z:1.2}},
-                                                        aspectmode: 'manual',
-                                                        aspectratio: {x:1, y:1, z:0.7}
-                                                    },
-                                                    paper_bgcolor: 'rgba(0,0,0,0)',
-                                                    plot_bgcolor: 'rgba(0,0,0,0)'
-                                                };
-
-                                                Plotly.newPlot(noiseDomeDiv, [trace], layout, {displayModeBar:false, responsive:true});
-                                            }
-
-                                            function updateMyLocatorPopup() {
-                                                if (!qthMarker) return;
-
-                                                const locator = document.getElementById('qth').value.trim().toUpperCase();
-                                                if (!locator) return;
-
-                                                const popupContent = `
-                                                    <div style="font-weight:bold; margin-bottom:6px;">My Locator: ${locator}</div>
-
-                                                    <div style="margin:8px 0;">
-                                                        <label style="display:block; margin-bottom:4px; font-weight:600;">
-                                                            RF-noise map (CSV):
-                                                        </label>
-                                                        <input type="file" id="noiseFileInput" accept=".csv,text/csv" style="width:100%;"/>
-                                                    </div>
-
-                                                    <div id="noiseDomeContainer" style="width:100%; height:260px; margin-top:8px; display:none;">
-                                                        <div id="noiseDomePlot" style="width:100%; height:100%;"></div>
-                                                        <div style="text-align:center; margin-top:4px; font-size:11px; color:#666;">
-                                                            Noise dome (dB) – warmer = noisier
-                                                        </div>
-                                                    </div>
-                                                `;
-
-                                                qthMarker.setPopupContent(popupContent);
-
-                                                qthMarker.off('popupopen popupclose');
-                                                qthMarker.on('popupopen', () => {
-                                                    const container = document.getElementById('noiseDomeContainer');
-                                                    noiseDomeDiv = document.getElementById('noiseDomePlot');
-
-                                                    if (myStationNoiseData && container) {
-                                                        container.style.display = 'block';
-                                                        createNoiseDome(myStationNoiseData);
-                                                    }
-
-                                                    const fileInput = document.getElementById('noiseFileInput');
-                                                    if (fileInput) {
-                                                        fileInput.onchange = (e) => {
-                                                            const file = e.target.files[0];
-                                                            if (!file) return;
-                                                            const reader = new FileReader();
-                                                            reader.onload = (ev) => {
-                                                                const parsed = parseNoiseCSV(ev.target.result);
-                                                                if (!parsed) {
-                                                                    alert('Could not parse CSV – need Azimuth;Elevation;Noise columns (semicolon-separated)');
-                                                                    return;
-                                                                }
-                                                                myStationNoiseData = parsed;
-                                                                container.style.display = 'block';
-                                                                createNoiseDome(parsed);
-                                                            };
-                                                            reader.readAsText(file);
-                                                        };
-                                                    }
-                                                });
-
-                                                qthMarker.on('popupclose', () => {
-                                                    if (noiseDomeDiv) Plotly.purge(noiseDomeDiv);
-                                                });
-                                            }
-                                            // ─────────────────────────────────────────────────────────────────────────────
-                                            // NEW QTH INPUT LISTENER – includes RF-noise file picker + 3D dome
-                                            // ─────────────────────────────────────────────────────────────────────────────
                                             qthInputElem.addEventListener("input", () => {
                                                 const locator = qthInputElem.value.trim().toUpperCase();
                                                 const chartLabel = document.getElementById('chartLabel');
-
                                                 if (/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(locator)) {
                                                     chartLabel.innerHTML = '<span class="metric-locator">Computing...</span>';
                                                     try {
                                                         computeLibrationForDay(locator, document.getElementById("date").value, 'qth');
                                                         computeFullDayData(qthDayData, locator, document.getElementById("date").value, true);
+                                                        // Invalidate relDayData to force recompute
                                                         relDayData.date = null;
-
-                                                        const {lat, lon} = qthToLatLon(locator);
-
-                                                        // Create or update the marker
-                                                        if (qthMarker) {
-                                                            qthMarker.setLatLng([lat, lon]);
+                                                        if (qthDayData.libration.length === 0) {
+                                                            console.warn(`No data computed for QTH ${locator}`);
+                                                            document.getElementById("chartWrapper").style.display = "none";
+                                                            if (chart) {
+                                                                chart.destroy();
+                                                                chart = null;
+                                                            }
+                                                            chartLabel.innerHTML = '<span class="metric-locator">No data for QTH</span>';
                                                         } else {
-                                                            qthMarker = L.marker([lat, lon], {
-                                                                icon: L.divIcon({
-                                                                    className: 'my-locator-icon',
-                                                                    html: '<div style="background:#0078d4;color:white;padding:2px 8px;border-radius:4px;font-weight:bold;font-size:12px;">MY</div>',
-                                                                    iconSize: [40, 30],
-                                                                    iconAnchor: [20, 30]
-                                                                })
-                                                            }).addTo(map);
+                                                            setTimeout(() => {
+                                                                updateChart(getCurrentIndex(), isRealTimeMode);
+                                                            }, 0);
                                                         }
-
-                                                        // ←←← NEW: add the fancy popup with file picker and 3D plot
-                                                        updateMyLocatorPopup();
-
-                                                        // Auto-open the popup the first time a valid locator is entered
-                                                        if (!qthMarker.isPopupOpen()) {
-                                                            qthMarker.openPopup();
-                                                        }
-
-                                                        setTimeout(() => updateChart(getCurrentIndex(), isRealTimeMode), 0);
                                                     } catch (e) {
                                                         console.error(`Error computing libration for QTH ${locator}: ${e.message}`);
                                                         document.getElementById("chartWrapper").style.display = "none";
-                                                        if (chart) { chart.destroy(); chart = null; }
+                                                        if (chart) {
+                                                            chart.destroy();
+                                                            chart = null;
+                                                        }
                                                         chartLabel.innerHTML = '<span class="metric-locator">Error computing QTH data</span>';
+                                                    }
+                                                    const {lat, lon} = qthToLatLon(locator);
+                                                    if (qthMarker) {
+                                                        qthMarker.setLatLng([lat, lon]);
+                                                    } else {
+                                                        qthMarker = L.marker([lat, lon])
+                                                            .addTo(map)
+                                                            .bindPopup(`My Locator: ${locator}`);
                                                     }
                                                 } else {
                                                     document.getElementById("chartWrapper").style.display = "none";
-                                                    if (chart) { chart.destroy(); chart = null; }
+                                                    if (chart) {
+                                                        chart.destroy();
+                                                        chart = null;
+                                                    }
+                                                    // Invalidate relDayData when QTH is invalid
                                                     relDayData.date = null;
                                                     chartLabel.innerHTML = '<span class="metric-locator">Enter valid QTH</span>';
                                                     if (qthMarker) {
-                                                        qthMarker.closePopup();
-                                                        qthMarker.setPopupContent(`My Locator: ${locator || '—'}`);
+                                                        qthMarker.remove();
+                                                        qthMarker = null;
                                                     }
                                                 }
                                             });
