--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3251,16 +3251,35 @@
                                                         // Create or update the marker
                                                         if (qthMarker) {
                                                             qthMarker.setLatLng([lat, lon]);
-                                                        } else {
-                                                            qthMarker = L.marker([lat, lon], {
-                                                                icon: L.divIcon({
-                                                                    className: 'my-locator-icon',
-                                                                    html: '<div style="background:#0078d4;color:white;padding:2px 8px;border-radius:4px;font-weight:bold;font-size:12px;">MY</div>',
-                                                                    iconSize: [40, 30],
-                                                                    iconAnchor: [20, 30]
-                                                                })
-                                                            }).addTo(map);
-                                                        }
+                                                            // Create or update the marker
+                                                            if (qthMarker) {
+                                                                qthMarker.setLatLng([lat, lon]);
+                                                            } else {
+                                                                // FIXED: clickable marker with blue "MY" circle
+                                                                qthMarker = L.marker([lat, lon], {
+                                                                    icon: L.icon({
+                                                                        iconUrl: 'data:image/svg+xml;base64,' + btoa(`
+                                                                            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                                                              <circle cx="24" cy="24" r="22" fill="%230078d4" stroke="%23ffffff" stroke-width="3"/>
+                                                                              <text x="24" y="30" font-family="Arial,Helvetica,sans-serif" font-size="18" font-weight="bold"
+                                                                                    fill="white" text-anchor="middle" dominant-baseline="middle">MY</text>
+                                                                            </svg>
+                                                                        `),
+                                                                        iconSize: [48, 48],
+                                                                        iconAnchor: [24, 24],
+                                                                        popupAnchor: [0, -24]
+                                                                    }),
+                                                                    zIndexOffset: 1000
+                                                                }).addTo(map);
+                                                            }
+
+                                                            // ←←← NEW: add the fancy popup with file picker and 3D plot
+                                                            updateMyLocatorPopup();
+
+                                                            // Auto-open the popup the first time a valid locator is entered
+                                                            if (!qthMarker.isPopupOpen()) {
+                                                                qthMarker.openPopup();
+                                                            }
 
                                                         // ←←← NEW: add the fancy popup with file picker and 3D plot
                                                         updateMyLocatorPopup();
