--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3351,10 +3351,12 @@
         
         const popupContent = `
             My Locator: ${locator}<br>
-            Day: ${info.dayOfWeek}<br>
-            Date: ${info.formattedDate}<br>
+                    <br>
+            ${info.dayOfWeek} ${info.formattedDate}<br>
+                    <br>
             Moonrise: ${info.moonrise}<br>
             Moonset: ${info.moonset}<br>
+                    <br>
             Sunrise: ${info.sunrise}<br>
             Sunset: ${info.sunset}
         `;
