--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3350,18 +3350,17 @@
         }
         
         const popupContent = `
-            My Locator: ${locator}<br>
-                    <br>
-            ${info.dayOfWeek} ${info.formattedDate}<br>
-                    <br>
-            Moonrise: ${info.moonrise}<br>
-            Moonset: ${info.moonset}<br>
-                    <br>
-            Sunrise: ${info.sunrise}<br>
-            Sunset: ${info.sunset}
+          My Locator: ${locator}<br>
+          <div style="height:4px"></div>
+          ${info.dayOfWeek} ${info.formattedDate}<br>
+          <div style="height:4px"></div>
+          Moonrise: ${info.moonrise}<br>
+          Moonset: ${info.moonset}<br>
+          <div style="height:4px"></div>
+          Sunrise: ${info.sunrise}<br>
+          Sunset: ${info.sunset}
         `;
-        qthMarker.bindPopup(popupContent);
-    }
+
 </script>
 <!-- Ko-Fi -->
 <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
