--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3361,6 +3361,8 @@
           Sunset: ${info.sunset}
         `;
 
+        qthMarker.bindPopup(popupContent);
+    }
 </script>
 <!-- Ko-Fi -->
 <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
